<resources>
    <string name="app_name">InstagramClone</string>
    <string name="register">Register</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="already_have_an_account_login">Already have an account Login ?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">login</string>
    <string name="don_t_have_account_sign_up">Don\'t have account? Sign up ?</string>
    <string name="create_new_account">create new account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="reel">Reel</string>
    <string name="profile">Profile</string>
    <string name="user">User</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="bio">bio</string>
</resources>